# gtest-tool

./: CMakeLists.txt  README.md
include/: common.h
src/: test.cpp
